# Real-Time_Edge_Detection

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetectionviewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edgedetectionviewer.cpp
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.java
app/src/main/java/com/example/edgedetectionviewer/gl/: MyGLRenderer.java  MyGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgedetectionviewer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: app.js
